# code-sensei

./: .env.example  .gitignore  CHANGELOG.md  CodeSenseiGUI.bat  HYBRID_LLM_GUIDE.md  QUICK_DISTRIBUTION.md  README.md  Run CodeSensei GUI (Debug).bat  Run CodeSensei GUI.bat  demo.py  demo_hybrid_modes.py  pyproject.toml  requirements.txt  retrieval-benchmark-summary.json  retrieval-benchmark-summary.md
.github/workflows/: ci.yml
benchmarks/retrieval/: ci_baseline_summary.json  ci_fixture_dataset.json  ci_fixture_results.json  code_sensei_smoke.json
config/: __init__.py  settings.py
demo_project/src/: auth.py  database.py  validation.py
docs/: BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHUNK_VISIBILITY_SOLUTION.md  COMPLETION_SUMMARY.md  DEMO_RESULTS.md  DISTRIBUTION.md  FEATURE_OVERVIEW.md  FEATURE_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  RECENT_CHANGES.md  TRUNCATION_AND_CHUNKS.md  demo_run_latest.txt
scripts/: build_distribution.py  build_gui_exe.ps1  report_retrieval_benchmark_delta.py
src/code_sensei/: __init__.py  cli.py  errors.py  gui_main.py  usage_tracker.py
src/code_sensei/assistant/: __init__.py  _base.py  doc_generator.py  qa.py  refactor.py  test_generator.py
src/code_sensei/cache/: __init__.py  sqlite_cache.py
src/code_sensei/evaluation/: __init__.py  retrieval_benchmark.py
src/code_sensei/gui/: __init__.py  app.py
src/code_sensei/indexer/: __init__.py  chunker.py  embedder.py  file_loader.py  watcher.py
src/code_sensei/memory/: __init__.py  conversation.py
src/code_sensei/retrieval/: __init__.py  retriever.py  vector_store.py
tests/: conftest.py  test_assistant.py  test_base_assistant.py  test_benchmark_reporting.py  test_chunk_visualization.py  test_chunker.py  test_cli_metrics.py  test_conversation_memory.py  test_embedder.py  test_error_handling.py  test_file_loader.py  test_gui.py  test_gui_e2e.py  test_retrieval_benchmark.py  test_retriever.py  test_sqlite_cache.py
