[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-sensei"
version = "0.1.0"
description = "Local Codebase LLM Assistant using RAG + Embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "rag", "embeddings", "code-assistant", "developer-tools"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # LLM orchestration
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-ollama>=0.1",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    # Embeddings / Vector store
    "chromadb>=0.5",
    "openai>=1.0",
    # File watching
    "watchdog>=4.0",
    # Caching
    # (sqlite3 is part of the Python standard library)
    # Utilities
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

gui = [
    "PyQt6>=6.7",
]

build = [
    "pyinstaller>=6.0",
]

[project.scripts]
code-sensei = "code_sensei.cli:main"
code-sensei-gui = "code_sensei.gui.app:main_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
